calendar first attempt

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Prontu&Ponto"
     />
+    <script src="https://apis.google.com/js/platform.js?onload=onLoadCallback" async defer></script>
     <title>Prontu&Ponto</title>
   </head>
   <body>
